# Edgeviewer

./: README.md  package-lock.json
android/: local.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/example/edgeviewer/: GLRenderer.java  MainActivity.java  NativeBridge.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
web-viewer/: package-lock.json  package.json  tsconfig.json
web-viewer/public/: index.html
web-viewer/src/: index.ts
